--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "serve-favicon": "^2.4.5",
     "socket.io": "^1.4.8"
   }
 }
