--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'",
-    "start": "nodemon server/server.js"
+    "test-watch": "node --exec 'npm test'",
+    "start": "node server/server.js"
   },
   "engines": {
     "node": "9.2.0"
