--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
     "express": "^4.14.0",
+    "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "moment": "^2.15.1",
+    "mongoose": "^4.13.9",
     "serve-favicon": "^2.4.5",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "validator": "^9.2.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
